--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ body, #sidebar, #basemap-switcher {
       apiKey: "AIzaSyBj8xPy81NaxFwHmBL3ni_UVjYKFZflyv0",
       authDomain: "exploridemap.firebaseapp.com",
       projectId: "exploridemap",
-      storageBucket: "exploridemap.firebasestorage.app",
+      storageBucket: "exploridemap.appspot.com",
       messagingSenderId: "1074659589759",
       appId: "1:1074659589759:web:f8bdffc15d41d47ac8094a"
     };
