--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@ const data = {
       warstwy[name] = { lista: [], layer: L.layerGroup().addTo(map) };
       layersToAdd.push(name);
       const order = loadLayerOrder();
-      order.push(name);
+      order.unshift(name);
       localStorage.setItem('warstwaOrder', JSON.stringify(order));
       generujListeWarstw();
       updateSaveButton();
