--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     .dragging { opacity: 0.5; }
     .warstwa h3 { margin: 5px 0; font-size: 16px; display: flex; align-items: center; cursor: pointer; }
     .warstwa input[type="checkbox"] { margin-right: 5px; }
-    .layer-number { margin-right: 5px; color: #bbb; cursor: move; user-select: none; }
+    .layer-number { margin-right: 5px; color: #bbb; cursor: move; user-select: none; font-size: 12px}
     .layer-number.dragging { opacity: 0.5; }
     .pinezki-lista { margin-left: 10px; display: block; }
     .ukryta { display: none; }
