Fix layer editor visibility

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       border-left: 1px solid #ccc;
       padding: 10px;
       overflow-y: auto;
+      z-index: 1550;
     }
     .layer-separator {
       border-bottom: 1px solid #555;
