Style popup in dark theme

--- a/index.html
+++ b/index.html
@@ -383,6 +383,21 @@ body, #sidebar, #basemap-switcher {
   max-width: 300px;
 }
 
+.leaflet-popup-content-wrapper {
+  background: #2b2b2b;
+  color: #f0f0f0;
+  border: 1px solid #444;
+}
+
+.leaflet-popup-tip {
+  background: #2b2b2b;
+  border: 1px solid #444;
+}
+
+.leaflet-popup-close-button {
+  color: #f0f0f0;
+}
+
 .popup-description.scrollable {
   max-height: 150px;
   overflow-y: auto;
